# secure-computation-library

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DoxyConf  README.md  RELEASE.txt
.github/workflows/: Build.yml  Checks.yml  Coverage.yml  Documentation.yml  Test.yml
doc/: CMakeLists.txt  DoxyConf  mainpage.md  styling.css
examples/: 01_primitives.cc  02_finite_fields.cc  03_secret_sharing.cc  04_networking.cc  CMakeLists.txt  README.md
include/scl/: hash.h  math.h  networking.h  prg.h  primitives.h  scl.h  secret_sharing.h
include/scl/coro/: batch.h  coroutine.h  future.h  promise.h  runtime.h  sleep_awaiter.h  task.h
include/scl/math/: array.h  bases.h  ec.h  ec_ops.h  ff.h  ff_ops.h  field_ops.h  fields.h  fp.h  la.h  lagrange.h  mat.h  math.h  matrix.h  number.h  ops.h  ops_gmp_ff.h  ops_small_fp.h  poly.h  ring.h  str.h  vec.h  vector.h  z2k.h  z2k_ops.h
include/scl/math/curves/: ec_ops.h  secp256k1.h
include/scl/math/fields/: ff_ops.h  ff_ops_gmp.h  mersenne127.h  mersenne61.h  secp256k1_field.h  secp256k1_scalar.h
include/scl/math/z2k/: details.h  z2k_ops.h
include/scl/net/: channel.h  config.h  loopback.h  mem_channel.h  net.h  network.h  packet.h  shared_deque.h  sys_iface.h  tcp_channel.h  tcp_utils.h  threaded_sender.h
include/scl/net/discovery/: client.h  discovery.h  server.h
include/scl/p/: simple.h
include/scl/primitives/: digest.h  hash.h  iuf_hash.h  prg.h  sha256.h  sha3.h
include/scl/protocol/: base.h  clock.h  env.h  eval.h  protocol.h  result.h
include/scl/serialization/: math_serializers.h  serializable.h  serialization.h  serializer.h  serializers.h
include/scl/simulation/: buffer.h  cancellation.h  channel.h  channel_id.h  config.h  context.h  env.h  event.h  hook.h  manager.h  measurement.h  mem_channel_buffer.h  result.h  runtime.h  simulation.h  simulator.h  transport.h
include/scl/ss/: additive.h  feldman.h  pedersen.h  poly.h  shamir.h  ss.h
include/scl/util/: bitmap.h  cmdline.h  digest.h  hash.h  iuf_hash.h  measurement.h  merkle.h  merkle_proof.h  prg.h  sha256.h  sha3.h  sign.h  str.h  time.h  traits.h  util.h
scripts/: build_compile_commands_json.sh  build_documentation.sh  check_all.sh  check_copyright_headers.py  check_coverage.py  check_coverage.sh  check_formatting.sh  check_header_guards.py
src/scl/: hash.cc  prg.cc
src/scl/coro/: runtime.cc
src/scl/math/: mersenne127.cc  mersenne61.cc  number.cc  ops_gmp_ff.cc  ops_gmp_ff.h  ops_small_fp.h  secp256k1_curve.cc  secp256k1_extras.h  secp256k1_field.cc  secp256k1_helpers.h  secp256k1_order.cc  secp256k1_scalar.cc  simple_ff.h  str.cc
src/scl/math/curves/: secp256k1_curve.cc
src/scl/math/fields/: ff_ops_gmp.cc  mersenne127.cc  mersenne61.cc  naf.h  secp256k1_field.cc  secp256k1_helpers.h  secp256k1_scalar.cc  small_ff.h
src/scl/net/: channel.cc  config.cc  mem_channel.cc  network.cc  tcp_channel.cc  tcp_utils.cc  threaded_sender.cc
src/scl/net/discovery/: client.cc  server.cc
src/scl/primitives/: prg.cc  sha256.cc  sha3.cc
src/scl/simulation/: channel.cc  config.cc  context.cc  event.cc  measurement.cc  result.cc  runtime.cc  simulate_recv_time.cc  simulator.cc  transport.cc
src/scl/util/: cmdline.cc  measurement.cc  prg.cc  sha256.cc  sha3.cc  str.cc
test/: CMakeLists.txt
test/data/: 3_parties.txt
test/scl/: gf7.cc  gf7.h  main.cc  test_hash.cc  test_prg.cc
test/scl/coro/: test_batch.cc  test_task.cc
test/scl/math/: fields.h  test_array.cc  test_ff.cc  test_la.cc  test_mat.cc  test_matrix.cc  test_mersenne127.cc  test_mersenne61.cc  test_number.cc  test_poly.cc  test_secp256k1.cc  test_vec.cc  test_vector.cc  test_z2k.cc
test/scl/net/: test_channel.cc  test_config.cc  test_discover.cc  test_loopback.cc  test_mem_channel.cc  test_network.cc  test_packet.cc  test_shared_deque.cc  test_tcp.cc  test_tcp_channel.cc  test_threaded_sender.cc  util.cc  util.h
test/scl/p/: test_simple.cc
test/scl/primitives/: test_prg.cc  test_sha256.cc  test_sha3.cc
test/scl/protocol/: beaver.h  test_protocol.cc  triple.h
test/scl/serialization/: test_serializer.cc
test/scl/simulation/: test_channel.cc  test_config.cc  test_context.cc  test_env.cc  test_event.cc  test_manager.cc  test_measurement.cc  test_mem_channel_buffer.cc  test_result.cc  test_simulator.cc
test/scl/ss/: test_additive.cc  test_feldman.cc  test_pedersen.cc  test_poly.cc  test_shamir.cc
test/scl/util/: test_bitmap.cc  test_cmdline.cc  test_ecdsa.cc  test_measurement.cc  test_merkle.cc  test_prg.cc  test_sha256.cc  test_sha3.cc  test_traits.cc
